# dsntk-histogram

./: Cargo.toml  LICENSE-MIT  README.md  Taskfile.yml  data.txt  histogram.gnu
data/: README.md  benchmarks.hgrm  benchmarks.txt  histogram.md
src/: main.rs
