[package]
name = "dsntk-histogram"
version = "0.0.1"
authors = ["Dariusz Depta <dariusz.depta@dsntk.io>"]
description = "DSNTK | Hisotgram"
documentation = "https://docs.rs/dsntk-histogram"
repository = "https://github.com/dsntk/dsntk-histogram.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
hdrhistogram = "7.5.4"
regex = "1.11.1"
